--- a/loader.html
+++ b/loader.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="load.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <div class="loader">
+        <div class="box-loader">
+            <div class="cube-loader"></div>
+        </div>
+    </div>
 </body>
 </html>
