--- a/loader.html
+++ b/loader.html
@@ -12,6 +12,12 @@
         <div class="box-loader">
             <div class="cube-loader"></div>
         </div>
+        <div class="content-loader">
+            Loading
+            <span style="--i:0s">.</span>
+            <span style="--i:.2s">.</span>
+            <span style="--i:.5s">.</span>
+        </div>
     </div>
 </body>
 </html>
